// ER diagram for hub-backend
// Paste this entire file into https://dbdiagram.io/d to render the diagram.
// Generated from the TypeORM entities under src/adapters/out/orm.

Project hub_backend {
  database_type: 'PostgreSQL'
  Note: 'Amores Fati hub-backend schema. Roles (admin/student/company) inherit from users via shared PK.'
}

// =====================================================================
// Enums (stored as varchar with CHECK constraints in the database).
// =====================================================================

Enum user_role {
  ADMIN
  STUDENT
  COMPANY
}

Enum gender {
  MALE
  FEMALE
  NON_BINARY
  PREFER_NOT_TO_SAY
  OTHER
}

Enum race {
  WHITE
  BLACK
  BROWN
  INDIGENOUS
  PREFER_NOT_TO_SAY
}

Enum education_level {
  NO_EDUCATION
  PRIMARY
  SECONDARY
  HIGHER
  POSTGRADUATE
}

Enum how_heard_channel {
  INSTAGRAM
  REFEREE
  LINKEDIN
  OTHERS
} 

Enum family_income {
  TO1_SALARY
  BETWEEN_1_3
  MORE_THAN_3


Enum social_benefit_type {
  BOLSA_FAMILIA
  BPC
  NONE
  OTHERS
}

// =====================================================================
// Identity / users
// =====================================================================

Table users {
  id uuid [primary key]
  email varchar(100) [not null]
  password_hash varchar(255) [not null]
  role varchar(20) [not null, note: 'CHECK: ADMIN | STUDENT | COMPANY']
  deleted_at timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table admins {
  id uuid [primary key, ref: - users.id]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table students {
  id uuid [primary key, ref: - users.id]
  cpf varchar [unique, not null]
  full_name varchar [not null]
  social_name varchar
  date_of_birth date [not null]
  gender varchar [not null]
  race varchar [not null]
  education varchar
  institution varchar
  activity_area varchar
  has_programming_experience boolean
  motivation text
  how_heard varchar
  has_computer boolean
  has_internet boolean
  committed_to_participate boolean
  family_income varchar
  household_size integer
  course_name varchar
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table companies {
  id uuid [primary key, ref: - users.id]
  cnpj varchar(18) [not null, unique]
  name varchar(100) [not null]
  responsible_name varchar(100) [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

// =====================================================================
// Telephones
// =====================================================================

Table telephone_student {
  id uuid [primary key]
  student_id uuid [not null, ref: - students.id]
  phone varchar(20) [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table telephone_company {
  id uuid [primary key]
  company_id uuid [not null, ref: - companies.id]
  phone varchar(20) [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

// =====================================================================
// Addresses
// =====================================================================

Table address_student {
  id uuid [primary key]
  student_id uuid [not null, ref: - students.id]
  neighbourhood varchar
  state char(2)
  city varchar(100)
  address varchar(255)
  cep varchar(9)
  complement varchar(255)
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table address_company {
  id uuid [primary key]
  company_id uuid [not null, ref: - companies.id]
  neighbourhood varchar
  state char(2)
  city varchar(100)
  address varchar(255)
  cep varchar(9)
  complement varchar(255)
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

// =====================================================================
// Student profile extras
// =====================================================================

Table disability {
  id uuid [primary key]
  name varchar [not null, unique]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table student_disability {
  student_id uuid [not null, ref: > students.id]
  disability_id uuid [not null, ref: > disability.id]
  indexes {
    (student_id, disability_id) [pk]
  }
}

Table social_benefit {
  id uuid [primary key]
  name varchar [not null, unique]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table student_social_benefit {
  student_id uuid [not null, ref: > students.id]
  social_benefit_id uuid [not null, ref: > social_benefit.id]
  indexes {
    (student_id, social_benefit_id) [pk]
  }
}

// =====================================================================
// Curriculum / skills
// =====================================================================

Table curriculum {
  id uuid [primary key]
  student_id uuid [unique, not null, ref: - students.id]
  is_available boolean [not null]
  about text
  linkedin varchar
  github varchar
  profile_photo varchar [note: 'URL da imagem']
  video_presentation varchar [note: 'URL do YouTube']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table skills {
  id uuid [primary key]
  name varchar(100) [not null, unique]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table curriculum_skills {
  curriculum_id uuid [not null, ref: > curriculum.id]
  skill_id uuid [not null, ref: > skills.id]
  indexes {
    (curriculum_id, skill_id) [pk]
  }
}

// =====================================================================
// Courses
// =====================================================================

Table courses {
  id uuid [primary key]
  name varchar [not null]
  banner varchar [not null, note: 'URL da imagem']
  description text
  course_load varchar [not null]
  start_date date [not null]
  end_date date [not null]
  start_registrations date [not null]
  end_registrations date [not null]
  link_access varchar [not null]
  modality varchar [not null, default: 'ONLINE']
  vacancy_count integer [not null, default: 0]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table in_person_course_details {
  id uuid [primary key]
  course_id uuid [unique, not null, ref: - courses.id]
  address varchar [not null]
  start_date date [not null]
  shift varchar [not null]
  room varchar [not null]
  vacancies int [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table enrollments {
  id uuid [primary key]
  student_id uuid [not null, ref: > students.id]
  course_id uuid [not null, ref: > courses.id]
  type varchar(20) [not null, note: 'CHECK: ENROLLMENT | INTEREST']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
  indexes {
    (student_id, course_id, type) [unique]
  }
}

// =====================================================================
// Job openings (company side)
// =====================================================================

Table job_openings {
  id uuid [primary key, default: `uuid_generate_v4()`]
  company_id uuid [not null, ref: > companies.id]
  name varchar [not null]
  description text
  openings_count int [not null, default: 1]
  is_pcd boolean [not null, default: false]
  workplace_type varchar(100) [not null, note: 'CHECK: PRESENCIAL|ONLINE|HIBRIDO']
  status boolean [not null]
  application_link varchar(255)
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table job_skills {
  job_id uuid [not null, ref: > job_openings.id]
  skill_id uuid [not null, ref: > skills.id]
  indexes {
    (job_id, skill_id) [pk]
  }
}

// =====================================================================
// Settings (key/value)
// =====================================================================

Table settings {
  id uuid [primary key]
  key varchar [not null, unique]
  value text [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}